--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: 
 plugins:
  - jekyll-sitemap
+
+<meta name="google-site-verification" content="KCLb6-Op6-ADlz_yJIcKNA3COkgdtU7mqoUtGI-mcKc" />
